[project]
name = "centralcoastcauldrons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.11",
    "mypy>=1.15.0",
    "psycopg>=3.2.6",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.39",
    "uv>=0.6.11",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]